fixed issue with css, working now to align everything correctly

--- a/W/css/style.css
+++ b/W/css/style.css
@@ -1,6 +1,6 @@
-#body {
-  display: grid;
-  width: 100%;
-  margin: 0px;
-  padding: 0px;
-}/*# sourceMappingURL=style.css.map */
+body{
+    display: grid;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+}
